<resources>
    <string name="app_name">Money Money</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>

    <!--Home page string-->
    <string name="CountDownDay">CountDown: 0 Day</string>
    <string name="Target">Target</string>
    <string name="Income">รายรับ</string>
    <string name="Outcome">รายจ่าย</string>
    <string name="TotaDayUse">เงินที่ใช้ได้ในวันนี้</string>
    <string name="ToDayTotal">0</string>
    <string name="unit"> บาท</string>
    <string name="Home">Home</string>

    <!--Type add target page string-->
    <string name="LearningType">Learning</string>
    <string name="FoodType">Food</string>
    <string name="Gift">Gift</string>
    <string name="TechnoType">Technology</string>
    <string name="MusicType">Music</string>
    <string name="AddType">Other</string>

    <string name="title_activity_income">Income</string>
    <string name="title_activity_income_table">Income</string>
    <string name="title_activity_outcome_table">Outcome</string>
    <string name="title_activity_summary_table">Summary</string>
    <string name="title_activity_taget_detail">Target</string>

    <!-- Target Detail page-->
    <string name="target_price">Target Price : </string>
    <string name="start_date">วันที่เริ่มต้นเก็บเงิน : </string>
    <string name="rest">จำนวนเงินที่ต้องเก็บอีก : </string>
    <string name="title_activity_add__target">Target</string>
    <string name="title_activity_add__income">Income</string>
    <string name="title_income_list">Income</string>
    <string name="title_income_detail">Income Detail</string>
    <string name="title_activity_income__detial">Income Detial</string>
    <string name="title_activity_income_edit_item">Edit Schedule Income</string>
    <string name="title_activity_add__outcome">Expense</string>
    <string name="title_activity_tips">Tips</string>
    <string name="title_activity_save_pay_food">How to save meal costs</string>
    <string name="title_activity_save_pay_petrol">How to save petrol costs</string>
    <string name="title_activity_save_other_pay">How to save other costs</string>
    <string name="title_activity_notification">Notification</string>
    <string name="pick_image_message">Click on the image to pick a new image:</string>
    <string name="pick_image_intent_text">Choose an image</string>
    <string name="title_activity_add_picture">Add Picture</string>

</resources>
