<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_Home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/Home" />
        <item
            android:id="@+id/nav_Income"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/Income" />
        <item
            android:id="@+id/nav_Outcom"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/Outcome" />
        <item
            android:id="@+id/nav_Summary"
            android:icon="@drawable/ic_menu_manage"
            android:title="สรุป" />
        <item
            android:id="@+id/nav_TIPs"
            android:icon="@drawable/ic_menu_manage"
            android:title="TIPs" />
        <item
            android:id="@+id/nav_Noti"
            android:icon="@drawable/ic_menu_manage"
            android:title="ตั้งค่าการแจ้งเตือน" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>

</menu>
