<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center|bottom"
            android:orientation="vertical"
            android:weightSum="1">

            <TableLayout

                android:layout_width="match_parent"
                android:layout_height="590dp"
                android:layout_marginTop="8dp"
                android:gravity="bottom"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0">

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="0sp"
                    android:layout_weight="0.1"
                    android:gravity="center"
                    tools:layout_editor_absoluteX="8dp"
                    tools:layout_editor_absoluteY="8dp">

                    <TextView
                        android:id="@+id/nameTarget"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:paddingTop="5sp"
                        android:text="@string/Target"
                        android:textColor="#000000"
                        android:textSize="30sp"
                        android:textStyle="bold" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="0sp"
                    android:layout_weight="0.2"
                    android:gravity="center"
                    tools:layout_editor_absoluteX="8dp"
                    tools:layout_editor_absoluteY="8dp">

                    <ImageButton
                        android:id="@+id/imageTargetBut"
                        android:layout_width="175dp"
                        android:layout_height="175dp"
                        app:srcCompat="@drawable/ic_menu_gallery"
                        tools:ignore="VectorDrawableCompat" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="0sp"
                    android:layout_margin="10sp"
                    android:layout_weight="0.1"
                    android:gravity="center"
                    tools:layout_editor_absoluteX="16dp"
                    tools:layout_editor_absoluteY="16dp">

                    <TextView
                        android:id="@+id/CoundownDay"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/CountDownDay"
                        android:textColor="#000000"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="0sp"
                    android:layout_margin="5dp"
                    android:layout_weight="0.1"
                    android:gravity="center"
                    tools:layout_editor_absoluteX="8dp"
                    tools:layout_editor_absoluteY="8dp">

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="50dp"
                        android:padding="5dp"
                        android:text="@string/TotaDayUse"
                        android:textColor="#000000"
                        android:textSize="18sp"
                        android:textStyle="bold" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="0sp"
                    android:layout_weight="0.15"
                    android:padding="20sp"
                    tools:layout_editor_absoluteX="8dp"
                    tools:layout_editor_absoluteY="8dp">

                    <TextView
                        android:id="@+id/TodayTotal"
                        android:layout_width="0sp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:gravity="end"
                        android:text="@string/ToDayTotal"
                        android:textColor="#000000"
                        android:textSize="40sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/Unit"
                        android:layout_width="0sp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:gravity="center"
                        android:text="@string/unit"
                        android:textColor="#000000"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="bottom"
                    tools:layout_editor_absoluteX="8dp"
                    tools:layout_editor_absoluteY="8dp">

                    <Button
                        android:id="@+id/IncomeBut"
                        android:layout_width="0sp"
                        android:layout_height="70dp"
                        android:layout_weight="1"
                        android:background="@color/colorPrimary"
                        android:text="@string/Income"
                        android:textColor="#FFFFFF"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/OutcomeBut"
                        android:layout_width="0dp"
                        android:layout_height="70dp"
                        android:layout_weight="1"
                        android:background="@color/colorAccent"
                        android:text="@string/Outcome"
                        android:textColor="#FFFFFF"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </TableRow>
            </TableLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>